<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvCreateNewUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvCreateNewUser"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.047" />

    <TextView
        android:id="@+id/tvLoginUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvLoginUser"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.047" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etCreateEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintEtCreateEmail"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvCreateNewUser"
        app:layout_constraintVertical_bias="0.081" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etLoginEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintEtCreateEmail"
        android:inputType="textEmailAddress"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvCreateNewUser"
        app:layout_constraintVertical_bias="0.081" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etCreatePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintEtCreatePassword"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/etCreateEmail"
        app:layout_constraintVertical_bias="0.115" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etLoginPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintEtCreatePassword"
        android:inputType="textEmailAddress"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/etCreateEmail"
        app:layout_constraintVertical_bias="0.115" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCreateUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnCreateUser"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/etCreatePassword"
        app:layout_constraintVertical_bias="0.136" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnValidateUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnValidateUser"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/etCreatePassword"
        app:layout_constraintVertical_bias="0.136" />

    <ListView
        android:id="@+id/validationsListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCreateUser"
        app:layout_constraintVertical_bias="0.083" />

</androidx.constraintlayout.widget.ConstraintLayout>
